force-app/main/default/objects/OCE__AccountPlanMember__c/OCE__AccountPlanMember__c.object-meta.xml
<CustomObject>
    <description>Connected Users for this Account Plan.</description>
    <label>Team Member</label>
    <nameField>
        <label>Account Plan Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>