force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__AccountPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE__AccountPlan__c</fullName>
    <description>Link to parent Account Plan.</description>
    <label>Account Plan</label>
    <referenceTo>OCE__AccountPlan__c</referenceTo>
    <relationshipLabel>Account Plan Members</relationshipLabel>
    <relationshipName>AccountPlanMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>