force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__ContactEmailRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__ContactEmailRef__c</fullName>
    <description>Denormalized Contact Email (MVP)</description>
    <label>Contact Email Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>