force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__Role__c.field-meta.xml
<CustomField>
    <fullName>OCE__Role__c</fullName>
    <description>Role of this member on Account Plan.</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KAM</fullName>
                <default>true</default>
                <label>KAM</label>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>MSL</fullName>
            </value>
            <value>
                <fullName>NAM</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>Role 1</fullName>
                <isActive>false</isActive>
                <label>Role 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>