force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__ShareAccountPlan__c.field-meta.xml
<CustomField>
    <fullName>OCE__ShareAccountPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Share Account Plan</description>
    <label>Share Account Plan</label>
    <type>Checkbox</type>
</CustomField>