force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__User__c.field-meta.xml
<CustomField>
    <fullName>OCE__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to User.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountPlanMembers</relationshipName>
    <type>Lookup</type>
</CustomField>