force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__UserEmail__c.field-meta.xml
<CustomField>
    <fullName>OCE__UserEmail__c</fullName>
    <description>User Email (MVP)</description>
    <label>User Email</label>
    <type>Email</type>
</CustomField>