force-app/main/default/objects/OCE__AccountPlanMember__c/fields/OCE__UserNameRef__c.field-meta.xml
<CustomField>
    <fullName>OCE__UserNameRef__c</fullName>
    <description>Denormalized User Name (MVP)</description>
    <label>User Name Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>