force-app/main/default/objects/OCE__AccountPlanMember__c/validationRules/OCE__Subscribed_Change_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Subscribed_Change_Not_Allowed</fullName>
    <active>false</active>
    <description>Prevents editing Global Team Member on subscriber org. (MVP)</description>
    <errorConditionFormula>AND(NOT(ISNEW()), NOT($Permission.OCE__OCEx_Admin), NOT( $Permission.OCE__OCEx_SuperAdmin), OCE__IsSubscribed__c = TRUE)</errorConditionFormula>
    <errorMessage>You cannot modify Global Team Member</errorMessage>
</ValidationRule>